Added tests and allergy-reports, updated Readme-file